--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 
             <!-- Navigation and Social Icons -->
             <nav class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-8">
+                <!-- Home Button -->
+                <a href="#" class="bg-secondary-accent text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-tertiary-highlight transition duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-tertiary-highlight focus:ring-opacity-75 page-link" data-page="home-page">
+                    Home <i class="fas fa-home ml-2"></i>
+                </a>
+
                 <!-- Dropdown Menu for Categories -->
                 <div class="relative dropdown">
                     <button class="bg-secondary-accent text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-tertiary-highlight transition duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-tertiary-highlight focus:ring-opacity-75">
@@ -349,6 +354,94 @@
             </div>
         </section>
 
+        <!-- SOBRE NÓS PAGE CONTENT -->
+        <section id="about-us-page" class="content-page p-6 bg-gray-700 rounded-lg shadow-md mb-6">
+            <h1 class="text-3xl font-bold text-tertiary-highlight mb-4">Sobre Nós - Pixel Épico: A Jornada dos Videogames</h1>
+            <p class="text-text-light leading-relaxed mb-4">Bem-vindo ao <b>Pixel Épico</b>, o seu portal definitivo para o universo dos videogames!</p>
+            <p class="text-text-light leading-relaxed mb-4">Nascemos da paixão inabalável por bits, bytes e aventuras digitais. Desde os gráficos em bloco dos primórdios até a imersão fotorrealista dos títulos mais recentes, e as visões futuristas dos jogos que ainda estão por vir, acreditamos que cada pixel conta uma história.</p>
+            <p class="text-text-light leading-relaxed mb-2">Nossa missão é ser a sua fonte mais completa e envolvente sobre a história, o presente e o futuro dos videogames. Aqui, você encontrará:</p>
+            <ul class="list-disc list-inside text-text-light leading-relaxed mb-4 pl-4">
+                <li><b class="text-secondary-accent">História Rica:</b> Uma linha do tempo detalhada da evolução dos consoles, dos jogos e das tecnologias que moldaram a indústria.</li>
+                <li><b class="text-secondary-accent">Análises Profundas:</b> Insights sobre os marcos culturais e tecnológicos, os sucessos e os fracassos que definiram gerações de jogadores.</li>
+                <li><b class="text-secondary-accent">Futuro em Perspectiva:</b> Uma espiada nas tendências emergentes, nas inovações tecnológicas e nos títulos mais aguardados que prometem revolucionar o cenário gamer.</li>
+            </ul>
+            <p class="text-text-light leading-relaxed mb-4">Nossa equipe é composta por entusiastas, historiadores de jogos e futuristas, todos unidos pelo amor aos videogames. Nosso objetivo é compartilhar esse conhecimento e essa paixão com você, explorando cada fase dessa jornada épica.</p>
+            <p class="text-text-light leading-relaxed font-bold text-tertiary-highlight text-xl">Junte-se a nós nesta aventura através do tempo e da tecnologia, celebrando a arte e a ciência por trás de cada jogo.</p>
+            <h2 class="text-2xl font-bold text-secondary-accent mt-6">Pixel Épico: Onde a História do Game Ganha Vida!</h2>
+        </section>
+
+        <!-- CONTATO PAGE CONTENT -->
+        <section id="contact-page-section" class="content-page p-6 bg-gray-700 rounded-lg shadow-md mb-6">
+            <h1 class="text-3xl font-bold text-tertiary-highlight mb-4">Contato - Pixel Épico</h1>
+            <p class="text-text-light leading-relaxed mb-4">Adoraríamos ouvir você! Seja para sugestões, parcerias, feedback ou apenas para compartilhar sua paixão por videogames, sinta-se à vontade para nos contatar.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">Email:</h2>
+            <ul class="list-disc list-inside text-text-light leading-relaxed mb-4 pl-4">
+                <li>Para perguntas gerais e feedback: <a href="mailto:contato@pixelepico.com" class="text-secondary-accent hover:text-tertiary-highlight">contato@pixelepico.com</a></li>
+                <li>Para oportunidades de parceria e imprensa: <a href="mailto:parcerias@pixelepico.com" class="text-secondary-accent hover:text-tertiary-highlight">parcerias@pixelepico.com</a></li>
+            </ul>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">Redes Sociais:</h2>
+            <p class="text-text-light leading-relaxed mb-4">Siga-nos em nossas redes sociais para as últimas notícias, atualizações e discussões sobre videogames!</p>
+            <div class="flex space-x-6 justify-start mb-4">
+                <a href="https://facebook.com/PixelEpicoOficial" target="_blank" class="text-secondary-accent hover:text-tertiary-highlight text-3xl"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://twitter.com/PixelEpico_Ofc" target="_blank" class="text-secondary-accent hover:text-tertiary-highlight text-3xl"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://instagram.com/pixelepico_oficial" target="_blank" class="text-secondary-accent hover:text-tertiary-highlight text-3xl"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://youtube.com/PixelEpicoTV" target="_blank" class="text-secondary-accent hover:text-tertiary-highlight text-3xl"><i class="fab fa-youtube-square"></i></a>
+            </div>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">Endereço (Escritório Fictício):</h2>
+            <p class="text-text-light leading-relaxed mb-4">
+                Pixel Épico Ltda.<br>
+                Rua dos Games, 123<br>
+                Bairro Joystick<br>
+                CEP 00000-000<br>
+                Cidade Gamer, SP - Brasil
+            </p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">Horário de Atendimento (Suporte por Email):</h2>
+            <p class="text-text-light leading-relaxed">Segunda a Sexta-feira: 9h00 - 18h00 (Horário de Brasília)</p>
+            <p class="text-text-light leading-relaxed mt-4">Agradecemos o seu interesse no Pixel Épico e esperamos a sua mensagem!</p>
+        </section>
+
+        <!-- POLÍTICA DE PRIVACIDADE PAGE CONTENT -->
+        <section id="privacy-policy-page" class="content-page p-6 bg-gray-700 rounded-lg shadow-md mb-6">
+            <h1 class="text-3xl font-bold text-tertiary-highlight mb-4">Política de Privacidade - Pixel Épico</h1>
+            <p class="text-text-light leading-relaxed mb-4">Esta Política de Privacidade descreve como o <b>Pixel Épico</b> coleta, usa e protege suas informações ao visitar nosso site. Valorizamos sua privacidade e estamos comprometidos em proteger seus dados pessoais.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">1. Coleta de Informações</h2>
+            <ul class="list-disc list-inside text-text-light leading-relaxed mb-4 pl-4">
+                <li><b>Informações Não Pessoais:</b> Coletamos dados estatísticos e anônimos sobre o uso do site, como páginas visitadas, tempo de permanência, tipo de navegador e dispositivo. Essas informações nos ajudam a entender como o site é usado e a melhorá-lo, mas não identificam você pessoalmente.</li>
+                <li><b>Cookies:</b> Nosso site pode usar "cookies" para melhorar a sua experiência de navegação. Cookies são pequenos arquivos de texto armazenados no seu dispositivo. Eles nos permitem lembrar suas preferências e otimizar o conteúdo. Você pode configurar seu navegador para recusar cookies, mas isso pode afetar a funcionalidade do site.</li>
+            </ul>
+            <p class="text-text-light leading-relaxed mb-4"><b>Não Coletamos</b> explicitamente informações pessoais identificáveis (como nome, email, telefone) através de formulários neste site, a menos que você nos contate diretamente por email ou através de plataformas de terceiros (como redes sociais) que você escolha usar para interagir conosco.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">2. Uso das Informações</h2>
+            <p class="text-text-light leading-relaxed mb-4">As informações coletadas são usadas exclusivamente para:</p>
+            <ul class="list-disc list-inside text-text-light leading-relaxed mb-4 pl-4">
+                <li>Melhorar e personalizar sua experiência em nosso site.</li>
+                <li>Analisar tendências de uso para otimizar o conteúdo e o design.</li>
+                <li>Monitorar o desempenho do site.</li>
+            </ul>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">3. Compartilhamento de Informações</h2>
+            <p class="text-text-light leading-relaxed mb-4">O Pixel Épico <b>não vende, aluga ou compartilha</b> suas informações não pessoais com terceiros para fins de marketing. As informações anônimas podem ser compartilhadas com parceiros de análise para relatórios gerais de tráfego e uso do site.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">4. Links para Terceiros</h2>
+            <p class="text-text-light leading-relaxed mb-4">Nosso site pode conter links para outros sites de terceiros. Esta Política de Privacidade se aplica apenas ao Pixel Épico. Não somos responsáveis pelas práticas de privacidade de outros sites. Aconselhamos que você leia as políticas de privacidade de qualquer site que visitar.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">5. Segurança dos Dados</h2>
+            <p class="text-text-light leading-relaxed mb-4">Tomamos medidas razoáveis para proteger as informações coletadas contra acesso não autorizado, uso indevido ou divulgação. No entanto, lembre-se que nenhum método de transmissão pela internet ou armazenamento eletrônico é 100% seguro.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">6. Alterações a Esta Política de Privacidade</h2>
+            <p class="text-text-light leading-relaxed mb-4">Podemos atualizar nossa Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página. Aconselhamos que você revise esta política regularmente para quaisquer modificações.</p>
+
+            <h2 class="text-2xl font-bold text-secondary-accent mb-2">7. Consentimento</h2>
+            <p class="text-text-light leading-relaxed mb-4">Ao usar nosso site, você concorda com os termos desta Política de Privacidade.</p>
+
+            <p class="text-sm text-gray-400 leading-relaxed mt-6"><b>Aviso Legal:</b> Esta é uma Política de Privacidade simplificada e fictícia para fins de demonstração. Para um site real que lida com dados de usuários, é essencial consultar um especialista legal para garantir a conformidade com as leis de proteção de dados aplicáveis (como a LGPD no Brasil ou GDPR na União Europeia).</p>
+        </section>
+
     </main>
 
     <!-- Footer -->
@@ -356,9 +449,10 @@
         <div class="container mx-auto text-center">
             <p>&copy; 2025 Pixel Épico. Todos os direitos reservados.</p>
             <div class="flex justify-center space-x-4 mt-3">
-                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300">Sobre Nós</a>
-                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300">Contato</a>
-                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300">Política de Privacidade</a>
+                <!-- Updated links to point to new sections -->
+                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300 page-link" data-page="about-us-page">Sobre Nós</a>
+                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300 page-link" data-page="contact-page-section">Contato</a>
+                <a href="#" class="text-text-light hover:text-tertiary-highlight transition duration-300 page-link" data-page="privacy-policy-page">Política de Privacidade</a>
             </div>
         </div>
     </footer>
@@ -388,7 +482,9 @@
 
                 // Close dropdown after selection on smaller screens
                 const dropdownMenu = document.querySelector('.dropdown-menu');
-                if (dropdownMenu && window.innerWidth < 768) { // Assuming md breakpoint is 768px
+                // Check if dropdownMenu exists and is currently block (visible)
+                if (dropdownMenu && window.getComputedStyle(dropdownMenu).display === 'block') {
+                    // Only hide if it's currently visible (meaning it was opened via click/hover)
                     dropdownMenu.style.display = 'none';
                 }
             }
@@ -402,10 +498,12 @@
                 });
             });
 
-            // Handle dropdown toggle for smaller screens (optional, if you want click instead of hover)
+            // Handle dropdown toggle for smaller screens
             const dropdownButton = document.querySelector('.dropdown > button');
             if (dropdownButton) {
-                dropdownButton.addEventListener('click', () => {
+                dropdownButton.addEventListener('click', (event) => {
+                    // Stop propagation to prevent document click from immediately closing it
+                    event.stopPropagation();
                     const dropdownMenu = dropdownButton.nextElementSibling;
                     if (dropdownMenu.style.display === 'block') {
                         dropdownMenu.style.display = 'none';
@@ -416,11 +514,18 @@
 
                 // Close dropdown if clicked outside
                 document.addEventListener('click', (event) => {
-                    if (!dropdownButton.contains(event.target) && !document.querySelector('.dropdown-menu').contains(event.target)) {
-                        document.querySelector('.dropdown-menu').style.display = 'none';
+                    const dropdown = document.querySelector('.dropdown');
+                    if (dropdown && !dropdown.contains(event.target)) {
+                        const dropdownMenu = document.querySelector('.dropdown-menu');
+                        if (dropdownMenu) {
+                            dropdownMenu.style.display = 'none';
+                        }
                     }
                 });
             }
+
+            // Ensure the home page is active when the site loads
+            showPage('home-page');
         });
     </script>
 </body>
