--- a/index.html
+++ b/index.html
@@ -58,21 +58,26 @@
         .dropdown:hover .dropdown-menu {
             display: block;
         }
+
+        /* Custom style to center the logo block for medium+ screens */
+        @media (min-width: 768px) {
+            .header-center-block {
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                /* Ensure it's above other elements if they overlap due to positioning */
+                z-index: 10;
+            }
+        }
     </style>
 </head>
 <body class="bg-primary-dark text-text-light min-h-screen flex flex-col">
 
     <!-- Header -->
     <header class="bg-primary-dark shadow-lg py-4 px-6 md:px-8 lg:px-12 rounded-b-lg">
-        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
-            <!-- Logo and Site Name -->
-            <div class="flex items-center mb-4 md:mb-0">
-                <img src="https://placehold.co/60x60/4299e1/ffffff?text=LOGO" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
-                <h1 class="text-3xl font-extrabold text-text-light tracking-wide">Pixel Épico</h1>
-            </div>
-
-            <!-- Navigation and Social Icons -->
-            <nav class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-8">
+        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between relative">
+            <!-- Left Block: Home Button and Categories Dropdown -->
+            <div class="flex items-center space-x-4 mb-4 md:mb-0 md:order-1">
                 <!-- Home Button -->
                 <a href="#" class="bg-secondary-accent text-white font-semibold py-2 px-6 rounded-lg shadow-md hover:bg-tertiary-highlight transition duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-tertiary-highlight focus:ring-opacity-75 page-link" data-page="home-page">
                     Home <i class="fas fa-home ml-2"></i>
@@ -169,15 +174,21 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Social Media Icons -->
-                <div class="flex space-x-4">
-                    <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-facebook"></i></a>
-                    <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-youtube"></i></a>
-                </div>
-            </nav>
+            <!-- Center Block: Logo and Site Name -->
+            <div class="flex items-center mb-4 md:mb-0 md:order-2 header-center-block">
+                <img src="https://placehold.co/60x60/4299e1/ffffff?text=LOGO" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
+                <h1 class="text-3xl font-extrabold text-text-light tracking-wide">Pixel Épico</h1>
+            </div>
+
+            <!-- Right Block: Social Media Icons -->
+            <div class="flex space-x-4 md:order-3">
+                <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-text-light hover:text-tertiary-highlight text-2xl transition duration-300 ease-in-out"><i class="fab fa-youtube"></i></a>
+            </div>
         </div>
     </header>
 
