--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 
             <!-- Center Block: Logo and Site Name -->
             <div class="flex items-center mb-4 md:mb-0 md:order-2 header-center-block">
-                <img src="https://placehold.co/60x60/4299e1/ffffff?text=LOGO" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
+                <!-- Updated src to point to the local images folder -->
+                <img src="./images/ChatGPT Image 26_06_2025, 13_08_51.jpg" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
                 <h1 class="text-3xl font-extrabold text-text-light tracking-wide">Pixel Épico</h1>
             </div>
 
@@ -199,6 +200,7 @@
             <h2 class="text-4xl font-bold text-secondary-accent mb-4">Bem-vindo ao Pixel Épico!</h2>
             <p class="text-lg text-text-light leading-relaxed">Sua fonte definitiva sobre a história, presente e futuro dos videogames. Navegue pelas categorias no menu acima para explorar a fascinante evolução dos jogos digitais, desde os primórdios até os títulos mais aguardados!</p>
             <div class="mt-8 flex justify-center">
+                <!-- You can replace this placeholder with an actual image if you have one -->
                 <img src="https://placehold.co/600x300/2d3748/edf2f7?text=Hist%C3%B3ria+dos+Games" alt="História dos Games" class="rounded-lg shadow-md max-w-full h-auto">
             </div>
         </section>
