--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <!-- Center Block: Logo and Site Name -->
             <div class="flex items-center mb-4 md:mb-0 md:order-2 header-center-block">
                 <!-- Updated src to point to the uploaded image asset -->
-                <img src="uploaded:image_d37b41.png-163799a8-d2fc-49fc-bf63-ab750eaa362e" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
+                <img src="uploaded:image_d3d5f5.png-2a16cc0d-cecf-4b77-803e-1bfa19024b5a" alt="Pixel Épico Logo" class="h-12 w-12 rounded-full mr-3 border-2 border-tertiary-highlight">
                 <h1 class="text-3xl font-extrabold text-text-light tracking-wide">Pixel Épico</h1>
             </div>
 
