--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
             <h2 class="text-4xl font-bold text-secondary-accent mb-4">Bem-vindo ao Pixel Épico!</h2>
             <p class="text-lg text-text-light leading-relaxed">Sua fonte definitiva sobre a história, presente e futuro dos videogames. Navegue pelas categorias no menu acima para explorar a fascinante evolução dos jogos digitais, desde os primórdios até os títulos mais aguardados!</p>
             <div class="mt-8 flex justify-center">
-                <!-- You can replace this placeholder with an actual image if you have one -->
-                <img src="https://placehold.co/600x300/2d3748/edf2f7?text=Hist%C3%B3ria+dos+Games" alt="História dos Games" class="rounded-lg shadow-md max-w-full h-auto">
+                <!-- Image for "História dos Games" updated to use the uploaded image -->
+                <img src="./images/historiadosgames.png" alt="História dos Games" class="rounded-lg shadow-md max-w-full h-auto">
             </div>
         </section>
 
